--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 
 # testing
 /coverage
+/test-results/
+/playwright-report/
+/playwright/.cache/
 
 # next.js
 /.next/
@@ -35,6 +38,10 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# editor/tool configs
+.qodo
+.claude
 
 # typescript
 *.tsbuildinfo
